--- a/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Alterar.cshtml
@@ -1,14 +1,18 @@
-﻿@model WebAtividadeEntrevista.Models.ClienteModel
+﻿﻿@model WebAtividadeEntrevista.Models.ClienteModel
 @{
     ViewBag.Title = "Alterar Cliente";
 }
 @section scripts{
-<script>
+    <script>
         var urlPost = '@Url.Action("Alterar", "Cliente", new { area = "" })';
         var obj = @Html.Raw(Json.Encode(Model));
         var urlRetorno = '@Url.Action("Index", "Cliente", new { area = "" })';
-</script>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+
     @Scripts.Render("~/bundles/altClientes")
 }
 <h2>@Html.Raw(ViewBag.Title)</h2>
 @Html.Partial("Forms")
+@Html.Partial("BeneficiariosForms")
