--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -1,28 +1,36 @@
-﻿
-<form id="formCadastro" method="post">
+﻿<form id="formCadastro" method="post">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="form-group">
                 <label for="Nome">Nome:</label>
                 <input required="required" type="text" class="form-control" id="Nome" name="Nome" placeholder="Ex.: João" maxlength="50">
             </div>
         </div>
-    </div>
-    <div class="row">
+
         <div class="col-md-6">
             <div class="form-group">
                 <label for="Sobrenome">Sobrenome:</label>
                 <input required="required" type="text" class="form-control" id="Sobrenome" name="Sobrenome" placeholder="Ex.: da Silva" maxlength="255">
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                <label for="CPF">CPF:</label>
+                <input required="required" type="text" class="form-control" id="CPF" name="CPF" placeholder="Ex.: 010.011.111-00" maxlength="14">
+            </div>
+        </div>
+
         <div class="col-md-6">
             <div class="form-group">
                 <label for="Nacionalidade">Nacionalidade:</label>
                 <input required="required" type="text" class="form-control" id="Nacionalidade" name="Nacionalidade" placeholder="Ex.: brasileira" maxlength="50">
             </div>
         </div>
-
     </div>
+
     <div class="row">
         <div class="col-md-4">
             <div class="form-group">
@@ -30,6 +38,7 @@
                 <input required="required" type="text" class="form-control" id="CEP" name="CEP" placeholder="Ex.: 01011-100" maxlength="9">
             </div>
         </div>
+
         <div class="col-md-4">
             <div class="form-group">
                 <label for="Estado">Estado:</label>
@@ -40,6 +49,7 @@
                 </select>
             </div>
         </div>
+
         <div class="col-md-4">
             <div class="form-group">
                 <label for="Cidade">Cidade:</label>
@@ -64,10 +74,19 @@
                 <input required="required" type="text" class="form-control" id="Email" name="Email" placeholder="Ex.: email@email.com" maxlength="2079">
             </div>
         </div>
+
         <div class="col-md-6">
             <div class="form-group">
                 <label for="Telefone">Telefone:</label>
                 <input required="required" type="tel" class="form-control" id="Telefone" name="Telefone" placeholder="Ex.: (11) 2020-3030" maxlength="15">
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="pull-left">
+                <button id="btBeneficiario" class="btn btn-default btn-primary">Beneficiários</button>
             </div>
         </div>
     </div>
@@ -80,6 +99,4 @@
             </div>
         </div>
     </div>
-
-
 </form>
